soul torch is a light source, Charlie

--- a/config/config/ominousdarkness-common.toml
+++ b/config/config/ominousdarkness-common.toml
@@ -109,6 +109,7 @@
             "minecraft:shroomlight$8",
             "minecraft:small_amethyst_bud$1",
             "minecraft:soul_lantern$5",
+            "minecraft:soul_torch$12",
             "minecraft:spectral_arrow$3",
             "minecraft:torch$7",
         ]
