--- a/config/config/towers_of_the_wild-common.toml
+++ b/config/config/towers_of_the_wild-common.toml
@@ -5,7 +5,7 @@
 	#Make towers spawn in the ocean. Default: true
 	spawnOceanTowers = true
 	#If the Waytones mod is installed and this is set to true, towers will spawn with a waystone at the top. If the Waystone mod is not installed, this will have no effect. Default: true
-	waystonesCompat = false
+	waystonesCompat = true
 	#A list of mod ids. In each and every biome added by those mods, the towers will not spawn. Default : The Midnight.
 	allModBiomesBlackList = ["midnight", "the_bumblezone"]
 	#How rarely the towers will spawn (low: common, high: rare). Default: 20
