--- a/config/config/waystones-server.toml
+++ b/config/config/waystones-server.toml
@@ -103,7 +103,7 @@
 		#If enabled, only the owner of a waystone (the one who placed it) can rename it.
 		restrictRenameToOwner = true
 		#If enabled, only creative players can place, edit or break waystones. This does NOT disable the crafting recipe.
-		restrictToCreative = false
+		restrictToCreative = true
 		#If enabled, waystones generated in worldgen are unbreakable.
 		generatedWaystonesUnbreakable = false
 
