cleanup file for later editing

--- a/config/config/logbegone.toml
+++ b/config/config/logbegone.toml
@@ -1,5 +1,10 @@
 
 [logbegone]
-	phrases = ["Disconnecting VANILLA connection attempt", "Channels "]
-	regex = ["Disconnecting VANILLA connection attempt", "Channels "]
+    phrases = [
+
+    ]
+
+    regex = [
+
+    ]
 
