Fix controller settings. Hopefully.

--- a/config/config/controllable/bindings.properties
+++ b/config/config/controllable/bindings.properties
@@ -2,7 +2,7 @@
 #Sun Dec 18 18:47:53 EST 2022
 controllable.key.moveDown=controllable.button.dpad_down
 controllable.key.previousRecipeTab=controllable.button.left_trigger
-key.playerlist=controllable.button.select
+key.playerlist=
 controllable.key.nextCreativeTab=controllable.button.right_bumper
 key.sneak=controllable.button.right_thumb_stick
 key.sprint=controllable.button.left_thumb_stick
