--- a/config/config/controllable/key_adapters.properties
+++ b/config/config/controllable/key_adapters.properties
@@ -1,14 +1,6 @@
 #Key Adapters
 #Sun Dec 18 18:47:53 EST 2022
-key.vault.description=
+gui.xaero_open_map=controllable.button.select
 keybind.sophisticatedbackpacks.open_backpack=
-key.horizontalwallrun.description=
-key.grab.description=
-key.breakfall.description=
 key.socialInteractions=
-key.wallslide.description=
-key.fastrunning.description=
-key.dodge.description=
-key.crawl.description=
-key.parcool.setting.open=
 ping.key.look=
