--- a/config/config/appliedenergistics2-client.toml
+++ b/config/config/appliedenergistics2-client.toml
@@ -46,7 +46,7 @@
 	enableEffects = true
 	#Power unit shown in AE UIs
 	#Allowed Values: AE, RF
-	PowerUnit = "AE"
+	PowerUnit = "RF"
 	#Show debugging GUI overlays
 	showDebugGuiOverlays = false
 
