--- a/config/config/emendatusenigmatica-common.toml
+++ b/config/config/emendatusenigmatica-common.toml
@@ -685,7 +685,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 5
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Aluminum Config"."The End"]
 		#Baseline Y-Level [Default: 80]
@@ -898,7 +898,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 4
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Nickel Config"."The End"]
 		#Baseline Y-Level [Default: 52]
@@ -969,7 +969,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 6
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Uranium Config"."The End"]
 		#Baseline Y-Level [Default: 32]
@@ -1182,7 +1182,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 5
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Zinc Config"."The End"]
 		#Baseline Y-Level [Default: 62]
@@ -1253,7 +1253,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 8
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Cobalt Config"."The End"]
 		#Baseline Y-Level [Default: 52]
@@ -1324,7 +1324,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 6
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Iridium Config"."The End"]
 		#Baseline Y-Level [Default: 32]
@@ -1679,7 +1679,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 5
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Cinnabar Config"."The End"]
 		#Baseline Y-Level [Default: 30]
@@ -1750,7 +1750,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 22
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Apatite Config"."The End"]
 		#Baseline Y-Level [Default: 116]
@@ -1821,7 +1821,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 7
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Sulfur Config"."The End"]
 		#Baseline Y-Level [Default: 28]
@@ -1892,7 +1892,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 5
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Potassium Nitrate Config"."The End"]
 		#Baseline Y-Level [Default: 45]
@@ -1963,7 +1963,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 6
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Arcane Config"."The End"]
 		#Baseline Y-Level [Default: 53]
@@ -2034,7 +2034,7 @@
 		#Range: 0 ~ 64
 		overworld_size = 2
 		#Activate/Deactivate the Ore Gen in The Overworld [Default: true]
-		generate_in_the_overworld = true
+		generate_in_the_overworld = false
 
 	["Dimensional Shard Config"."The End"]
 		#Baseline Y-Level [Default: 30]
