--- a/config/config/dsurround/sndctrl-client.toml
+++ b/config/config/dsurround/sndctrl-client.toml
@@ -25,7 +25,7 @@
 	#Range: 8 ~ 16
 	"Streaming Sound Count" = 10
 	#Possible sounds to play when client reaches main game menu
-	"Startup Sound List" = ["minecraft:entity.experience_orb.pickup", "minecraft:entity.chicken.egg", "minecraft:ambient.underwater.exit"]
+	"Startup Sound List" = ["ding:sounds/gamefreq0-flex"]
 
 #Defines parameters for special effects
 ["Effect Options"]
