--- a/datapacks/gdn_1_16_5/data/net.darkglass.mc.dp/dimension/grey_create_project.json
+++ b/datapacks/gdn_1_16_5/data/net.darkglass.mc.dp/dimension/grey_create_project.json
@@ -15,8 +15,8 @@
           "height": 70
         }
       ],
-      "biome": "net.darkglass.mc.dp.grey:safespace"
+      "biome": "net.darkglass.mc.dp:safespace"
     }
   },
-  "type": "net.darkglass.mc.dp.grey:safedim"
+  "type": "net.darkglass.mc.dp:grey_safedim"
 }
