fix biome names and interconnections

--- a/datapacks/gdn_1_16_5/data/net.darkglass.mc.dp/dimension/grey_create_project.json
+++ b/datapacks/gdn_1_16_5/data/net.darkglass.mc.dp/dimension/grey_create_project.json
@@ -15,7 +15,7 @@
           "height": 70
         }
       ],
-      "biome": "net.darkglass.mc.dp:safespace"
+      "biome": "net.darkglass.mc.dp:grey_safespace"
     }
   },
   "type": "net.darkglass.mc.dp:grey_safedim"
