disable spanorama flash warning

--- a/config/config/spanorama-client.toml
+++ b/config/config/spanorama-client.toml
@@ -7,5 +7,5 @@
 	#Whether to use custom panoramas on the main menu
 	useCustomPanoramas = true
 	#Whether to show the flash warning screen on launch. 
-	disableFlashWarning = false
+	disableFlashWarning = true
 
