Stop generation of a lot of stuff to help unify

--- a/config/config/ProjectRed.cfg
+++ b/config/config/ProjectRed.cfg
@@ -55,40 +55,40 @@
 # Contains settings related to world gen. You can enable/disable each ore or strucure, change retro generation settings, and increase how rare something is by increasing the resistance value.
 "World Gen" {
 	# 
-	B:"Ruby Ore"=true
+	B:"Ruby Ore"=false
 
 	# 
 	I:"Ruby Ore vein size"=8
 
 	# 
-	B:"Sapphire Ore"=true
+	B:"Sapphire Ore"=false
 
 	# 
 	I:"Sapphire Ore vein size"=8
 
 	# 
-	B:"Peridot Ore"=true
+	B:"Peridot Ore"=false
 
 	# 
 	I:"Peridot Ore vein size"=10
 
 	# 
-	B:"Marble Caves"=true
+	B:"Marble Caves"=false
 
 	# 
-	B:"Copper Ore"=true
+	B:"Copper Ore"=false
 
 	# 
 	I:"Copper Ore vein size"=8
 
 	# 
-	B:"Tin Ore"=true
+	B:"Tin Ore"=false
 
 	# 
 	I:"Tin Ore vein size"=8
 
 	# 
-	B:"Silver Ore"=true
+	B:"Silver Ore"=false
 
 	# 
 	I:"Silver Ore vein size"=9
