African lions are hostile, no matter what you say

--- a/config/config/scaling-health/game_settings.toml
+++ b/config/config/scaling-health/game_settings.toml
@@ -258,6 +258,10 @@
 			types = ["minecraft:villager"]
 			onKilled = "difficulty + 0.01"
 
+        [[difficulty.mutators.byEntity]]
+            types = ["zawa:african_lion"]
+            onKilled = "difficulty + 1"
+
 	[difficulty.multipliers]
 
 		#Allows difficulty to be changed based on the moon phase. values must have 8 elements.
