--- a/config-src/config/ProjectE/custom_emc/config.yaml
+++ b/config-src/config/ProjectE/custom_emc/config.yaml
@@ -1,4 +1,4 @@
-basemult: 3 # this is documentation and not used by the program
+basemult: 6 # this is documentation and not used by the program
 customRecipes: [] # none
 values:
     # normal ones that are handed to the resolver
@@ -6,11 +6,14 @@ values:
     normal:
         explicit:
             -
+                bep: '<item:minecraft:coal>'
+                value: 768
+            -
                 bep: '<item:minecraft:diamond>'
-                value: 24576
+                value: 49152
             -
                 bep:   '<item:minecraft:oak_wood>'
-                value: 192
+                value: 384
         equivalent:
             -
                 bep: '<item:minecraft:oak_wood>'
