add vanilla mobs, courtesy of Dreaming

--- a/config-src/config/incontrol/loot/tiers.yaml
+++ b/config-src/config/incontrol/loot/tiers.yaml
@@ -1,12 +1,63 @@
 tier1:
-    - "error"
+    - "minecraft:bat"
+    - "minecraft:cat"
+    - "minecraft:chicken"
+    - "minecraft:cod"
+    - "minecraft:cow"
+    - "minecraft:donkey"
+    - "minecraft:horse"
+    - "minecraft:mooshroom"
+    - "minecraft:mule"
+    - "minecraft:parrot"
+    - "minecraft:pig"
+    - "minecraft:rabbit"
+    - "minecraft:salmon"
+    - "minecraft:sheep"
+    - "minecraft:skeleton_horse"
+    - "minecraft:squid"
+    - "minecraft:strider"
+    - "minecraft:tropical_fish"
+    - "minecraft:turtle"
+    - "minecraft:villager"
+    - "minecraft:wandering_trader"
+    - "minecraft:wolf"
+    - "minecraft:zombie_horse"
 tier2:
     - "doom:lost_soul"
+    - "minecraft:dolphin"
+    - "minecraft:endermite"
+    - "minecraft:fox"
+    - "minecraft:llama"
+    - "minecraft:ocelot"
+    - "minecraft:panda"
+    - "minecraft:polar_bear"
+    - "minecraft:pufferfish"
+    - "minecraft:silverfish"
+    - "minecraft:snow_golem"
+    - "minecraft:trader_llama"
+    - "minecraft:zombified_piglin"
 tier3:
     - "doom:chaingunner"
     - "doom:pinky"
     - "doom:shotgunguy"
     - "doom:spectre"
+    - "minecraft:bee"
+    - "minecraft:drowned"
+    - "minecraft:ghast"
+    - "minecraft:husk"
+    - "minecraft:iron_golem"
+    - "minecraft:magma_cube"
+    - "minecraft:phantom"
+    - "minecraft:piglin"
+    - "minecraft:pillager"
+    - "minecraft:skeleton"
+    - "minecraft:slime"
+    - "minecraft:spider"
+    - "minecraft:stray"
+    - "minecraft:vindicator"
+    - "minecraft:zoglin"
+    - "minecraft:zombie"
+    - "minecraft:zombie_villager"
 tier4:
     - "doom:archvile"
     - "doom:baron"
@@ -18,5 +69,20 @@ tier4:
     - "doom:painelemental"
     - "doom:revenant"
     - "doom:spidermastermind"
+    - "minecraft:blaze"
+    - "minecraft:cave_spider"
+    - "minecraft:creeper"
+    - "minecraft:elder_guardian"
+    - "minecraft:ender_dragon"
+    - "minecraft:enderman"
+    - "minecraft:evoker"
+    - "minecraft:guardian"
+    - "minecraft:hoglin"
+    - "minecraft:piglin_brute"
+    - "minecraft:ravager"
+    - "minecraft:shulker"
+    - "minecraft:vex"
+    - "minecraft:witch"
+    - "minecraft:wither_skeleton"
 tier5:
-    - "error"
+    - "minecraft:wither"
